--------------------------
Darshan Release Change Log
--------------------------

darshan-2.2.5-pre2
=============
* Fix bug in mount point identification when --enable-stat-at-open option is
  not used.  In Darshan 2.2.4, some file entries were recorded as using the "/"
  file system regardless of their location.
* Update documentation to no longer recommend --enable-stat-at-open option on 
  any systems
* Fix unresolved symbols error when linking non-MPI programs with Cray
  compiler.  Reported by Yushu Yao.

darshan-2.2.4
=============
* Disable extra stat() of newly opened files by default.  This improves 
  performance on shared files for some platforms.  Reported by Yushu Yao.
  - prevents Darshan from reporting SIZE_AT_OPEN, FILE_ALIGNENT, and 
    DARSHAN_FILE_NOT_ALIGNED values
  - features can still be enabled via --enable-stat-at-open option
* Fix missing -lz in post ld flags reported by Yushu Yao.  Fixes a link-time
  error for some corner-case applications.
* Fix bug in Cray compiler script patches that was setting compiler flags 
  incorrectly.  Reported by Yushu Yao.
  WARNING: if you are using a previous Darshan release (2.2.3 through
  2.2.4-pre4) on a Cray platform, please re-patch your compiler scripts.
* Update darshan-gen-* scripts to support the potential for additonal LDFLAGS
  or CFLAGS that appear before the object or source file in the compile or
  link commands.  This fixes compatibility with some mvapich2 installations,
  reported by Dragos Constantin.

darshan-2.2.3
=============
* improved Cray XE6 support
  - support for GNU, PGI, Cray, Pathscale, and Intel compilers
  - patch adding Darshan capability to system compiler scripts
  - software module, including testing and features contributed 
    by Yushu Yao and Katie Antypas of The National Energy Research 
    Scientific Computing Center (NERSC)
  - improved documentation
* minor bug fixes:
  - properly detect cxx library name when generating BG/Q compiler wrappers