@@ -43,6 +43,13 @@ AC_ARG_ENABLE(ld-preload,
 fi]
 ,)
 
+AC_ARG_ENABLE(group-readable-logs, 
+[  --enable-group-readable-logs Set log files to be group readable], 
+[if test "x$enableval" = "xyes" ; then
+    AC_DEFINE(__CP_GROUP_READABLE_LOGS, 1, Define if Darshan should set log files to be group readable)
+fi]
+,)
+
 AC_ARG_ENABLE(stat-at-open, 
 [  --enable-stat-at-open   Perform stat() call at open time to gather extra statistics], 
 [if test "x$enableval" = "xyes" ; then
